# ethpwn

./: .bumpversion.cfg  .gitignore  .gitmodules  404.html  LICENSE  README.md  docs_requirements.txt  gen_doc.sh  index.html  push_to_pypi.sh  pyproject.toml  sh
.github/workflows/: mkdocs.yml  publish.yml  pylint.yml
chains/: index.html
docs/: gendoc.sh  mkdocs.yml
docs/docs/: chains.md  faq.md  index.md
docs/docs/ethdbg/: commands.md  index.md  showroom.md  usage.md
docs/docs/ethpwn/: about.md  cli.md  evmanalyzers.md  getting_started.md  global_state.md  showroom.md  usage.md
docs/site/: 404.html  index.html
docs/site/chains/: index.html
docs/site/ethdbg/: index.html
docs/site/ethpwn/: index.html
docs/site/faq/: index.html
docs/site/search/: search_index.json
ethdbg/: INSTALL.txt  TODO.txt  breakpoint.py  ethdbg.py  evm.py  index.html  transaction_debug_target.py
ethdbg/commands/: index.html
ethdbg/commands/break/: index.html
ethdbg/commands/calldata/: index.html
ethdbg/commands/callhistory/: index.html
ethdbg/commands/context/: index.html
ethdbg/commands/continue/: index.html
ethdbg/commands/disass/: index.html
ethdbg/commands/ethtowei/: index.html
ethdbg/commands/finish/: index.html
ethdbg/commands/log_op/: index.html
ethdbg/commands/memory/: index.html
ethdbg/commands/next/: index.html
ethdbg/commands/sloads/: index.html
ethdbg/commands/sstores/: index.html
ethdbg/commands/start/: index.html
ethdbg/commands/step/: index.html
ethdbg/commands/storageat/: index.html
ethdbg/commands/storagelayout/: index.html
ethdbg/commands/tbreak/: index.html
ethdbg/commands/weitoeth/: index.html
ethdbg/showroom/: index.html
ethdbg/usage/: index.html
ethpwn/: index.html
ethpwn/about/: index.html
ethpwn/api/: index.html
ethpwn/cli/: index.html
ethpwn/evmanalyzers/: index.html
ethpwn/getting_started/: index.html
ethpwn/global_state/: index.html
ethpwn/modules/assembly_utils/: index.html
ethpwn/modules/cli/: index.html
ethpwn/modules/compilation/: index.html
ethpwn/modules/config/: index.html
ethpwn/modules/contract_labels/: index.html
ethpwn/modules/contract_metadata/: index.html
ethpwn/modules/contract_names/: index.html
ethpwn/modules/contract_registry/: index.html
ethpwn/modules/currency_utils/: index.html
ethpwn/modules/evm/: index.html
ethpwn/modules/evm_analyzer/: index.html
ethpwn/modules/global_context/: index.html
ethpwn/modules/hashes/: index.html
ethpwn/modules/prelude/: index.html
ethpwn/modules/python_introspection_utils/: index.html
ethpwn/modules/serialization_utils/: index.html
ethpwn/modules/transactions/: index.html
ethpwn/modules/user_input/: index.html
ethpwn/modules/utils/: index.html
examples/: ethernaut_fallback_exploit_offchain.py  ethernaut_telephone_exploit.sol  exploit_onchain.py
examples/ethernaut-ethpwn-solutions/: .gitignore  .gitmodules  LICENSE  README.md  consolidate_ctf_funds_into.py  exploit_onchain.py  weth.sol
examples/ethernaut-ethpwn-solutions/alien_codex/: exploit.sol
examples/ethernaut-ethpwn-solutions/coin_flip/: coin_flip_exploit.py  exploit.sol
examples/ethernaut-ethpwn-solutions/delegation/: delegation_exploit.py  exploit.sol
examples/ethernaut-ethpwn-solutions/denial/: exploit.sol
examples/ethernaut-ethpwn-solutions/dex/: contract.sol  exploit.sol
examples/ethernaut-ethpwn-solutions/dex_two/: contract.sol  exploit.sol
examples/ethernaut-ethpwn-solutions/doubleentrypoint/: contract.sol  detection.py  detection.sol  exploit.py  exploit.sol
examples/ethernaut-ethpwn-solutions/elevator/: exploit.sol
examples/ethernaut-ethpwn-solutions/force/: exploit.sol
examples/ethernaut-ethpwn-solutions/gatekeeper_one/: exploit.sol  gatekeeper_one_exploit.py
examples/ethernaut-ethpwn-solutions/gatekeeper_three/: exploit.sol
examples/ethernaut-ethpwn-solutions/gatekeeper_two/: exploit.sol
examples/ethernaut-ethpwn-solutions/good_samaritan/: exploit.sol
examples/ethernaut-ethpwn-solutions/king/: exploit.sol
examples/ethernaut-ethpwn-solutions/motorbike/: contract.sol  exploit.py  exploit.sol
examples/ethernaut-ethpwn-solutions/naught_coin/: exploit.sol  naught_coin_exploit.py
examples/ethernaut-ethpwn-solutions/preservation/: exploit.sol
examples/ethernaut-ethpwn-solutions/privacy/: bytecode_privacy.evm  exploit.sol
examples/ethernaut-ethpwn-solutions/puzzle_wallet/: exploit.sol  exploit_offchain.py  exploit_onchain.py
examples/ethernaut-ethpwn-solutions/recovery/: exploit.sol
examples/ethernaut-ethpwn-solutions/reentrancy/: exploit.sol
examples/ethernaut-ethpwn-solutions/shop/: exploit.sol
examples/ethernaut-ethpwn-solutions/solver/: exploit.sol  solver_exploit.py
examples/ethernaut-ethpwn-solutions/telephone/: exploit.sol
examples/ethernaut-ethpwn-solutions/token/: exploit.sol
faq/: index.html
pwn/: .gitignore  README.md  pyproject.toml
pwn/examples/: ethernaut_fallback_exploit_offchain.py  exploit_onchain.py
pwn/src/ethpwn/: alchemy_utils.py  assembly_utils.py  cli.py  contract_metadata.py  contract_registry.py  ctf_utils.py  currency_utils.py  global_context.py  hashes.py  json_utils.py  prelude.py  pyevmasm_fixed.py  serialization_utils.py  solcx_utils.py  solidity_utils.py  srcmap.py  transactions.py  utils.py
pwn/src/ethpwn/config/: __init__.py  verified_contracts.py  wallets.py
pwn/src/ethpwn/console_scripts/: txdecode.py
pwn/src/ethpwn/exploit_templates/0.6/: Destructible.sol
pwn/tests/: test_compiler_fuzzer.py  test_simulation_trace_pretty_printing.py
search/: search_index.json
src/ethpwn/: __init__.py
src/ethpwn/dbg/: TODO.txt  (+6 more)
tests/: test_compiler_fuzzer.py  test_function_parsing.py  test_simulation_trace_pretty_printing.py
(+201 files in other folders)
