[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # to allow github dependencies

[project]
name = "ethpwn"
license = {text = "MIT License"}
version = "0.0.3"
authors = [
  { name="Lukas Dresel", email="Lukas-Dresel@noreply.github.com" },
  { name="Fabio Gritti", email="degrigis@ucsb.edu"}
]
description = "A swiss army knife package to help with ethereum smart contract exploit interaction, designed with CTF challenges in mind. Some might call it a set of pwn tools for ethereum exploitation."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "web3>=6.0.0",
    "requests",
    "pysha3",
    "hexbytes",
    "virtualenv",

    "ethcx",
    "ethpwn-py-evm",
    "ethpwn-pyevmasm",

    "ansi",
    "rich",
    "cbor",
    "pysha3>=1.0.2",
    "hexdump",
    "backoff",
    "cachetools",
    "alive-progress",
    "coolname",
]

keywords = [
    "ethereum",
    "smart-contracts",
    "exploits",
    "ctf",
    "security",
    "testing",
    "debugging",
    "ipdb"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
settings_recovery = [
    "simanneal",
    "editdistance",
]
dev = [
    "ipdb",
    "ipython",
    "deepdiff",
    "simanneal",
    "editdistance",
]

[project.urls]
"Homepage" = "https://github.com/ethpwn/ethpwn"
"Bug Tracker" = "https://github.com/ethpwn/ethpwn/issues"

[project.scripts]
ethdbg = "ethpwn.dbg.ethdbg:main"
ethpwn = "ethpwn.ethlib.cli:main"
